# container-management

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml
.github/workflows/: cargo.yml  main.yml
arg-poc/: Cargo.toml  Dockerfile
arg-poc/src/: main.rs
arg-test/: Cargo.toml  Dockerfile
arg-test/src/: main.rs
camera-poc/: Cargo.toml  Dockerfile
camera-poc/src/: main.rs
first-app/: Dockerfile
first-app/src/: main.rs
manager/: package-lock.json
manager-api/: Cargo.toml  Dockerfile
manager-api/src/: compose.rs  container.rs  container_creation.rs  container_logs.rs  image.rs  main.rs  web_result.rs
manager-web/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  svelte.config.js  tsconfig.json  vite.config.js
manager-web/public/: site.webmanifest
manager-web/src/: App.svelte  global.css
manager-web/src/pages/: index.svelte
manager-web/src/pages/_components/: ContainerArgField.svelte  ContainerLog.svelte  ContainerRow.svelte  StatusTag.svelte
manager-web/src/pages/containers/: [containerName].svelte  _store.js  index.svelte
manager-web/src/utils/: api.ts  container.js  dateTimeUtils.ts  onInterval.js
manager/src/: main.rs
network-poc/: Cargo.toml  Dockerfile
panic-poc/: Cargo.toml  Dockerfile
panic-poc/src/: main.rs
rocket-poc/: Cargo.toml  Dockerfile
rocket-poc/src/: main.rs
second-app/: Cargo.toml  Dockerfile
second-app/src/: main.rs
volume-poc/: Cargo.toml  Dockerfile
volume-poc/src/: main.rs
