[package]
name = "manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version="0.5.0-rc.2", features = ["json"]}
# temporary reversion crate, due to build error https://github.com/lawliet89/rocket_cors/issues/111
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }
# TODO fix
# dockworker 0.0.23 works, but 0.0.24 does not, with the error message upon dockerworker instance making a request to the docker daemon
# message: "rocket Cannot start a runtime from within a runtime" ..
dockworker = { git = "https://github.com/stianlaa/dockworker.git", branch = "container-logs-until" }
serde = "1.0.140"
serde_json = "1.0.81"
serde_yaml = "0.9.4"
docker-compose-types = "0.2.0"